--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,8 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
     - name: Step 1 - Checkout master branch from GitHub
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     
     - name: Step 2 - Set up JDK 1.8
       uses: actions/setup-java@v3
