--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Step 2 - Set up JDK 1.8
       uses: actions/setup-java@v3
       with:
-        java-version: '8'
-        distribution: 'microsoft'
+        java-version: 8
+        distribution: microsoft
         architecture: x64
         cache: maven
 
