--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 8
-        distribution: microsoft
+        distribution: temurin
         architecture: x64
         cache: maven
 
