--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 name: Main branch testing & deploy
 
 on:
-  pull_request:
+  push:
     branches:
       - master
 
@@ -26,5 +26,8 @@ jobs:
       - name: Step 3 - Build with Maven
         run: mvn -B package --file pom.xml
 
-      - name: Step 4 - Auto-deploy on Tomcat
-        run: curl -u admin:32167 http://213.200.39.253:8080/host-manager/text/add?name=usainua&aliases=usainusaaliases&/home/runner/work/usainua.api/usainua.api/target/usainua_api-0.0.1-SNAPSHOT.war&autoDeploy=true
+      - name: Step 4 - Check place of war file
+        run: ls
+
+      - name: Step 5 - Auto-deploy on Tomcat
+        run: curl -v -u admin:32167 http://213.200.39.253:8080/manager/text/deploy?war=usainua_api-0.0.1-SNAPSHOT.war
