--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,4 +27,7 @@ jobs:
         run: mvn -B package --file pom.xml
 
       - name: Step 4 - Auto-deploy on Tomcat
-        run: curl http://github:github@213.200.39.253/manager/text/deploy?war=target/usainua_api-0.0.1-SNAPSHOT.war&path=/usainua_api&update=true
+        run:
+          cd target
+          ls
+          curl http://github:github@213.200.39.253/manager/text/deploy?war=usainua_api-0.0.1-SNAPSHOT.war&path=/usainua_api&update=true
