--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,6 +27,9 @@ jobs:
         run: mvn -B package --file pom.xml
 
       - name: Step 4 - Auto-deploy on Tomcat
+        env:
+          LOGIN: ${{ secrets.TOMCAT_LOGIN }}
+          PASSWORD: ${{ secrets.TOMCAT_PASSWORD }}
         run: |
           cd target
-          curl -T usainua_api-0.0.1-SNAPSHOT.war "http://github:github@213.200.39.253/manager/text/deploy?&path=/usainua_api&update=true"
+          curl -T *.war "http://$LOGIN:$PASSWORD@213.200.39.253/manager/text/deploy?&path=/usainua_api&update=true"
