--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>${project.artifactId}##${project.version}</finalName>
     </build>
 
 </project>
